--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 
         <p class="mb-2">My toolkit primarily includes the following technologies, but is always expanding:</p>
 
+        <!-- FRONTEND -->
         <section class="my-3 md:mt-5">
           <h3 class="font-light uppercase text-sm sm:text-base border-b mb-3 md:mb-4 w-32">Frontend</h3>
           <ul class="flex flex-wrap pl-6 -mr-8">
@@ -205,6 +206,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">JavaScript</span>
             </li>
+            <!-- TODO: TypeScript -->
             <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.43 29.43" class="w-8 h-8" aria-hidden="true">
                 <circle cx="14.71" cy="14.71" r="14.71" fill="#1f252d" />
@@ -229,19 +231,10 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">Tailwind</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 875.7" class="w-8 h-8" aria-hidden="true">
-                <path fill="#FFF" d="M387 0l387 218.9v437.9L387 875.7 0 656.8V218.9z" />
-                <path fill="#8ed6fb"
-                  d="M704.9 641.7L399.8 814.3V679.9l190.1-104.6 115 66.4zm20.9-18.9V261.9l-111.6 64.5v232l111.6 64.4zM67.9 641.7L373 814.3V679.9L182.8 575.3 67.9 641.7zM47 622.8V261.9l111.6 64.5v232L47 622.8zm13.1-384.3L373 61.5v129.9L172.5 301.7l-1.6.9-110.8-64.1zm652.6 0l-312.9-177v129.9l200.5 110.2 1.6.9 110.8-64z" />
-                <path fill="#1c78c0"
-                  d="M373 649.3L185.4 546.1V341.8L373 450.1v199.2zm26.8 0l187.6-103.1V341.8L399.8 450.1v199.2zm-13.4-207zM198.1 318.2l188.3-103.5 188.3 103.5-188.3 108.7-188.3-108.7z" />
-              </svg>
-              <span class="text-xs md:text-sm mt-1">Webpack</span>
-            </li>
           </ul>
         </section>
 
+        <!-- BACKEND -->
         <section class="my-3 md:mt-5">
           <h3 class="font-light uppercase text-sm md:text-base border-b mb-3 md:mb-4 w-32">Backend</h3>
           <ul class="flex flex-wrap pl-6 -mr-8">
@@ -326,6 +319,7 @@
           </ul>
         </section>
 
+        <!-- GENERAL -->
         <section class="mt-3 md:mt-5">
           <h3 class="font-light uppercase text-sm md:text-base border-b mb-3 md:mb-4 w-32">General</h3>
           <ul class="flex flex-wrap pl-6 -mr-8">
@@ -354,6 +348,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">Jest</span>
             </li>
+            <!-- TODO: Cypress -->
           </ul>
         </section>
 
